<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_button_title" />

    <Button
        android:id="@+id/btn_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_action" />

    <Button
        android:id="@+id/btn_long_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_click_action" />

    <Button
        android:id="@+id/btn_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_action" />

</LinearLayout>